vcluster_scratch/my-vcluster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-vcluster-ingress
  namespace: team-x
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Use your correct cluster issuer name
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: my-vcluster.navicore.tech # Replace with your actual domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-vcluster
            port:
              number: 443
  tls:
  - hosts:
    - my-vcluster.navicore.tech
    secretName: my-vcluster-tls
